Added Ultimate TicTacToe

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 		<canvas id="cell6" width="100" height="100" style="border:3px solid black;" onclick="draw(this)"></canvas>
 		<canvas id="cell7" width="100" height="100" style="border:3px solid black;" onclick="draw(this)"></canvas>
 		<canvas id="cell8" width="100" height="100" style="border:3px solid black;" onclick="draw(this)"></canvas>
-
+		
 	</div>
+	<p class="switch"><a href="ultimate.html">Ultimate</a></p>
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
 	<script type="text/javascript" src="logic.js"></script>
 	<script>
