--- a/ultimate.html
+++ b/ultimate.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Ultimate TTT</title>
-	<link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300|Raleway' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -189,7 +189,7 @@
 			</td>
 		</tr>
 	</table>
-	<p>Player <span id="p-symbol">x</span>'s turn</p>
+	<h3 class="message">Player &nbsp;<span id="p-symbol">x</span>&nbsp;'s turn</h3>
 	<p class="switch"><a href="index.html">Regular</a></p>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
